# AI-HelperChatTelegramBot

./: .env.example  .gitignore  Makefile  README.md  app_bot.py  bot.py  pyproject.toml  requirements.txt
aichattelegrambot/: __init__.py  chat.py  fetch.py  image.py  logger.py  translator.py  visa.py  voice.py
aichattelegrambot/utils/: audio_converter.py  message_templates.py  text_formatting.py  unavailability.py
financeanalysis/: analysis.py  dev.ipynb  scraper.py  utils.py
lib/: openai_models.py  speech.py  text_formatting.py  translator.py  visa.py
lib/utils/: audio_converter.py
