[tool.poetry]
name = "ai-helperchattelegrambot"
version = "0.1.0"
description = ""
authors = ["Eldar Gazizov <kursus1010@gmail.com>"]
readme = "README.md"
packages = [
    {include = "aichattelegrambot"},
    {include = "financeanalysis"},
]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.27.2"
python-telegram-bot = {extras = ["job-queue"], version = "^20.2"}
selenium = "^4.8.1"
python-dotenv = "^0.21.1"
pydub = "^0.25.1"
aiohttp = "^3.8.4"
requests = "^2.28.2"
pandas = "^1.5.3"
yfinance = "^0.2.14"
ta-lib = "^0.4.25"
mplfinance = "^0.12.9b7"
scikit-learn = "^1.2.2"
beautifulsoup4 = "^4.12.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.1.1"
pylint = "^2.17.0"
ipykernel = "^6.22.0"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 100
disable = [
    "no-member",
    "invalid-name",
    "unused-import",
    "missing-timeout",
    "use-dict-literal",
    "wrong-import-order",
    "redefined-outer-name",
    "misplaced-bare-raise",
    "broad-exception-caught",
    "broad-exception-raised",
    "too-few-public-methods",
    "missing-module-docstring",
    "consider-using-enumerate",
    "not-async-context-manager",
    "missing-function-docstring",
    "logging-fstring-interpolation",
]

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
